<resources>
    <string name="app_name">Chatr</string>
    <string name="main_title_text">Chatr</string>
    <string name="edit_text_hint">Enter Chatr here</string>
    <string name="button_send_text">Post</string>
    <string name="button_view_text">View</string>
    <string name="button_back_text">Back</string>
    <string name="view_title_text">Last 30 Chatrs</string>
    <string name="list_view_empty_text">No chatr available</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_username_summary">Set or change username</string>
    <string name="preference_user_password">Password</string>
    <string name="preference_user_password_summary">Set or change password</string>
    <string name="preference_main_bg_color_title">Main background colour</string>
    <string name="preference_main_bg_color_summary">Modify background colour</string>
    <string name="preference_key_username">username</string>
    <string name="preference_key_password">password</string>
    <string name="preference_key_main_bg_color">main_bg_color</string>
    <string name="color_change_title_text">Change Background Color: </string>
</resources>
