<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/preference_key_username"
        android:summary="@string/preference_username_summary"
        android:title="@string/preference_username_title" />

    <EditTextPreference
        android:key="@string/preference_key_password"
        android:summary="@string/preference_user_password_summary"
        android:title="@string/preference_user_password" />

    <ListPreference
        android:key="@string/preference_key_main_bg_color"
        android:entries="@array/color_names"
        android:entryValues="@array/colour_values"
        android:summary="@string/preference_main_bg_color_summary"
        android:title="@string/preference_main_bg_color_title" />

</PreferenceScreen>